fixed dragissue on mobile devices

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body{
   width: 100%;
   height: 10rem;
   background-color: rgba(var(--bgDark),0.9);
-
+  overflow-x: scroll;
 }
 
 .memeslider > img{
